--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://kit.fontawesome.com/c48265f5dd.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./finalTask.css">
+  <link rel="stylesheet" href="./all.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
